force-app/main/default/objects/redwing__ILT_Event__c/redwing__ILT_Event__c.object-meta.xml
<CustomObject>
    <label>ILT Event</label>
    <nameField>
        <label>ILT Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>