force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Background_Image_URL__c</fullName>
    <inlineHelpText>URL for the image displayed in the Learning detail header</inlineHelpText>
    <label>Background Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>