force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <inlineHelpText>This description is displayed for users on the ILT Event detail page.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>