force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Duration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration__c</fullName>
    <inlineHelpText>Default duration for ILT Classes in days.</inlineHelpText>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>