force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Hide_On_ILT_Calendar__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_On_ILT_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, newly created ILT Classes within this Event will be hidden from the ILT Calendar by default and only available through the list</inlineHelpText>
    <label>Hide on ILT Calendar</label>
    <type>Checkbox</type>
</CustomField>