force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Last_Class_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Last_Class_Date__c</fullName>
    <inlineHelpText>The date of the last ILT Class in the ILT Event.</inlineHelpText>
    <label>Last Class Date</label>
    <type>Date</type>
</CustomField>