force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>ILT Events</relationshipLabel>
    <relationshipName>ILT_Events</relationshipName>
    <type>Lookup</type>
</CustomField>