force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Off_Platform__c.field-meta.xml
<CustomField>
    <fullName>redwing__Off_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, registration for ILT Classes within this Event will be managed outside of Appinium/Salesforce.</inlineHelpText>
    <label>Off-Platform</label>
    <type>Checkbox</type>
</CustomField>