force-app/main/default/objects/redwing__ILT_Event__c/fields/redwing__Registration_Survey__c.field-meta.xml
<CustomField>
    <fullName>redwing__Registration_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the default registration survey to be used for new ILT Classes created within this ILT Event</inlineHelpText>
    <label>Registration Survey</label>
    <referenceTo>redwing__Survey__c</referenceTo>
    <relationshipLabel>ILT Events</relationshipLabel>
    <relationshipName>ILT_Events</relationshipName>
    <type>Lookup</type>
</CustomField>